import "ApiRequest.proto";

message MultiFightRequest{//扫荡请求
	optional ApiRequest api = 1;//接口基础数据
	optional int32 missionId = 2;//关卡
	optional int32 num = 3;//扫荡次数
}